compiler/testData/diagnostics/tests/lateinit/NoInapplicableLateinitModifierForPropertyWithUnnresolvedType.kt
// FIR_IDENTICAL
// ISSUE: KT-51624

lateinit var x: <!UNRESOLVED_REFERENCE!>UnresolvedType<!>